--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,30 @@
 hs_err_pid*
 
 .idea
-*.iml
-target/
+
+
+**/.idea/*
+**/*.iml
+**/.gradle/
+
+**/.diretory
+
+**/*.bin
+**/*.lock
+**/*.war
+**/*.class
+**/target/
+
+**/*.log
+
+
+**/*.ipr
+**/*.iws
+
+**/webapp/VAADIN/
+
+**/.directory
+
+**/build/*
+**/release/*.apk
+**/release/*.json
